--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="cart-modal-root"></div>
     <div id="mobile-navbar-root"></div>
     <div id="lightbox-modal-root"></div>
     <script type="module" src="/src/main.tsx"></script>
