--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Solution of A E-commerce product page challenge from Frontend Mentor"
+    />
 
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 
@@ -10,7 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="cart-modal-root"></div>
     <div id="mobile-navbar-root"></div>
     <div id="lightbox-modal-root"></div>
     <script type="module" src="/src/main.tsx"></script>
